--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -77,3 +77,34 @@
 .footer .copyright a{
   color:#ef7900;
 }
+
+/* samus's ball */
+body {
+  position: relative;
+}
+#samus {
+  position: absolute;
+  top: 46px;
+  right: 46px;
+  cursor: pointer;
+  display: block;
+  border:1px solid #000;
+  height:10px;
+  width: 10px;
+  border-radius: 50%;
+  opacity:0.97;
+}
+
+/* bomb */
+.bbb {
+  -webkit-animation-name:shock;
+  -webkit-animation-iteration-count:1;
+  -webkit-animation-duration:0.3s;
+}
+@-webkit-keyframes shock{
+  20% {-webkit-transform: translate(50px);}
+  30% {-webkit-transform: translate(50px, -10px);}
+  40% {-webkit-transform: translate(-50px, 10px);}
+  60% {-webkit-transform: translate(10px, 5px);}
+  80% {-webkit-transform: translate(-10px, -5px);}
+}
