--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -108,3 +108,8 @@ body {
   60% {-webkit-transform: translate(10px, 5px);}
   80% {-webkit-transform: translate(-10px, -5px);}
 }
+
+.zclip-position {
+  position: relative;
+  display: inline-block;
+} 
