迷走中、迷走を経て解にたどりつくはず

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,6 @@
+body {
+  color:#373737;
+}
 .icon-copy {
   position: relative;
   font-weight: bold;
@@ -112,4 +115,4 @@ body {
 .zclip-position {
   position: relative;
   display: inline-block;
-} 
+}
