--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -103,6 +103,9 @@ body {
   -webkit-animation-name:shock;
   -webkit-animation-iteration-count:1;
   -webkit-animation-duration:0.3s;
+  animation-name:shock;
+  animation-iteration-count:1;
+  animation-duration:0.3s;
 }
 @-webkit-keyframes shock{
   20% {-webkit-transform: translate(50px);}
@@ -110,6 +113,13 @@ body {
   40% {-webkit-transform: translate(-50px, 10px);}
   60% {-webkit-transform: translate(10px, 5px);}
   80% {-webkit-transform: translate(-10px, -5px);}
+}
+@keyframes shock{
+  20% {transform: translate(50px);}
+  30% {transform: translate(50px, -10px);}
+  40% {transform: translate(-50px, 10px);}
+  60% {transform: translate(10px, 5px);}
+  80% {transform: translate(-10px, -5px);}
 }
 
 .zclip-position {
