--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,6 +44,11 @@ body {
   background-color: #ef7900;
   border-color: #D36B00;
 }
+.btn-orange:hover {
+  color: #FFF;
+  background-color: #FF8100;
+  border-color: #D36B00;
+}
 .orange {
   background-color: #ef7900;
 }
@@ -57,7 +62,7 @@ body {
 }
 .nav .logo {
   display:inline-block;
-  font-size:20px;
+  font-size:30px;
 }
 .nav .logo a {
   padding: 5px;
@@ -71,6 +76,7 @@ body {
 .nav {
   border-top: 4px solid #EF7900;
   padding: 5px 0 0 0;
+  margin: 0 0px 30px 0;
 }
 
 /* footer */
@@ -134,7 +140,11 @@ body {
 }
 #copytext {
   margin:0 0 5px 0;
+  height: 220px;
 }
 #text_count,#text_byte {
   font-size: 25px;
+}
+.count-area {
+  margin:0 0px 0 0;
 }
