--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -179,3 +179,16 @@ body {
 .introduce {
   padding: 10px 20px 20px;
 }
+
+.command-talbe tr td:first-child {
+  font-size: 24px;
+  font-weight: 200;
+}
+
+.table>tbody>tr.head-line>td {
+  height: 10px;
+  font-size: 14px;
+  background-color: #BBB;
+  padding: 2px 2px 2px 7px;
+  color: #fff;
+}
